<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/sign_page" />

            <TextView
                android:id="@+id/signuptext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createnewaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/create_an_new_account"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameeditg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emaileditg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/birthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BirthDate"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/birthDateeditg"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="date"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/datebutton"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_launcher_datecalendar" />
        </LinearLayout>

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <EditText
                    android:id="@+id/passwordedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <EditText
                    android:id="@+id/confirmpasswordedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/by_creating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="8dp"
                android:text="@string/by_creating_an_account"
                android:textColor="@color/gray" />
            <ProgressBar
                android:id="@+id/forgetpasswordProgressbar"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                app:cornerRadius="60dp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>

